--- a/locker/Views/Home/Index.cshtml
+++ b/locker/Views/Home/Index.cshtml
@@ -101,14 +101,10 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                @*<button type="button" class="btn btn-primary">Save changes</button>*@
             </div>
         </div>
     </div>
 </div>
-
-
-<script type="text/javascript">var obj1 = "somevalue";
-    var obj2 = "someothervalue";</script>
 <script src="~/js/script.js"></script>
-<script src="~/js/layOutDay.js"></script>
+
