--- a/locker/Views/Home/file.cshtml
+++ b/locker/Views/Home/file.cshtml
@@ -1,31 +1,61 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-}
+@{ }
 
-
+@model IEnumerable<filelist>
 <form action="/home/get" method="get" class="mt-3">
-    <input type="text" name="input" placeholder="number locker or all" />
-    <input type="submit" value="click" />
+    <div class="row">
+        <div class="col">
+            <div class="form-group">
+                <select class="form-control" id="exampleFormControlSelect1" name="type">
+                    <option>lockers</option>
+                    <option>users</option>
+                </select>
+            </div>
+        </div>
+        <div class="col">
+            <div class="form-group">
+                <input class="form-control" type="text" name="input" id="in" placeholder="number locker/username or all" />
+            </div>
+               
+            </div>
+            <div class="col">
+                <input class="btn btn-success"  type="submit" value="click" />
+            </div>
+        </div>
+   
+   
 </form>
 @if (Model != null)
 {
-    <div id="test1">
-        <ul id="message">
-            @foreach(var i in Model)
-            {
-                <li>@i</li>
-            }
-        </ul>
+  
+<table class="table table-bordered">
+    <thead>
+        <tr>
+            <th scope="col">start</th>
+            <th scope="col">end</th>
+            <th scope="col">locker number</th>
+            <th scope="col">create date</th>
+            <th scope="col">by</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var i in Model)
+        {
+        <tr>
+            <td>@i.start</td>
+            <td>@i.end</td>
+            <td>@i.locker</td>
+            <td>@i.date</td>
+            <td>@i.by</td>
+        </tr>}
+        </tbody>
+    </table>}
 
-    </div>
-}
-
-@if(ViewBag.count != null)
+@if (ViewBag.count != null)
 {
-    <h5>Count : @ViewBag.count</h5>
-}
+<h5>Count : @ViewBag.count</h5>}
 
 
 
