--- a/locker/Views/Shared/_Layout.cshtml
+++ b/locker/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-            <a class="navbar-brand" href="#">Locker</a>
+            <a class="navbar-brand" href="/">Locker</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -27,9 +27,8 @@
                         <a class="nav-link" href="/home/Mylockers">My locker</a>
                     </li>
                 </ul>
-                <p class="mr-5 text-uppercase text-primary bg-light">Hello! : @TempData["username"] </p>
                 <form class="form-inline my-2 my-lg-0" action="/login/authlogout" method="post">
-                    <button class="btn btn-dark my-2 my-sm-0" type="submit">Logout</button>
+                    <button class="btn btn-dark" style=" margin-left:auto;" type="submit">Logout</button>
                 </form>
             </div>
         </nav>
