--- a/locker/wwwroot/css/time-modal.css
+++ b/locker/wwwroot/css/time-modal.css
@@ -8,12 +8,6 @@ span,
 applet,
 object,
 iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
 p,
 blockquote,
 pre,
@@ -78,14 +72,13 @@ section,
 summary,
 time,
 audio {
-    margin: 0;
+     margin: 0;
     padding: 0;
     border: 0;
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
     font-family: 'Montserrat', sans-serif;
-    color: #D1D1D1;
 }
 
 .container-time {
@@ -116,28 +109,54 @@ audio {
     height: 720px;
     width: 33%;
     padding: 0px 10px;
-    background-color: #F0F0F0;
+    background-color: #97a1a1;
     border-color: #D1D1D1;
     border-style: solid;
     border-width: 1px;
     box-sizing: border-box;
 }
-
 .event {
-    background-color: white;
-    border-style: solid;
-    border-width: 1px;
-    border-left-width: 5px;
-    border-color: #D1D1D1;
-    border-left-color: #57b986;
-    padding-left: 10px;
-    padding-top: 5px;
-    position: absolute;
-    font-size: 0.5em;
-    box-sizing: border-box;
+    width: 300px;
+}
+@media only screen and (max-width: 420px) {
+    .days {
+        height: 720px;
+        width: 23%;
+    }
+    .event {
+        width: 210px;
+    }
+}
+@media only screen and (max-width: 375px) {
+    .days {
+        height: 720px;
+        width: 19%;
+    }
+    .event {
+        width: 100px;
+    }
 }
 
-.event .title {
-    color: #57b986;
-    font-size: 200%;
-}
+
+    .event {
+        background-color: white;
+        border-style: solid;
+        border-width: 1px;
+        border-left-width: 5px;
+        border-color: #D1D1D1;
+        border-left-color: orangered;
+        padding-left: 10px;
+        padding-top: 5px;
+        position: absolute;
+        font-size: 0.5em;
+        box-sizing: border-box;
+    }
+
+        .event .title {
+            color: #c20086;
+            font-size: 250%;
+        }
+
+    h1, h2, h3, h4, h5, h6 {
+        color: black
+    }
